[gd_scene load_steps=3 format=3 uid="uid://2a3531dl7e5q"]

[ext_resource type="Script" path="res://Scripts/InGame/Editors/EditorBoard.gd" id="1_bubis"]
[ext_resource type="PackedScene" uid="uid://b5gxuskm5c0f4" path="res://Scenes/InGame/Boards/BoardNodeEditable.tscn" id="2_dypo2"]

[node name="BoardEditor" type="Node2D"]
script = ExtResource("1_bubis")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[node name="MenuTop" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 64.0
grow_horizontal = 2
mouse_filter = 2

[node name="Left" type="HBoxContainer" parent="CanvasLayer/UI/MenuTop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="NewButton" type="Button" parent="CanvasLayer/UI/MenuTop/Left"]
layout_mode = 2
text = "New"

[node name="SaveButton" type="Button" parent="CanvasLayer/UI/MenuTop/Left"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/UI/MenuTop/Left"]
layout_mode = 2
text = "Load"

[node name="NameEdit" type="LineEdit" parent="CanvasLayer/UI/MenuTop"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -16.0
offset_right = 128.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Board Name"
alignment = 1

[node name="MenuBottom" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -64.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Left" type="HBoxContainer" parent="CanvasLayer/UI/MenuBottom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="ExitButton" type="Button" parent="CanvasLayer/UI/MenuBottom/Left"]
layout_mode = 2
text = "Main Menu"

[node name="FileDialogHolder" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NewDialog" type="ConfirmationDialog" parent="CanvasLayer/UI/FileDialogHolder"]
initial_position = 1
size = Vector2i(374, 132)
dialog_text = "
    Are you sure you want to clear the board?   

"

[node name="SaveDialog" type="FileDialog" parent="CanvasLayer/UI/FileDialogHolder"]
initial_position = 1
size = Vector2i(800, 500)
access = 2
filters = PackedStringArray("*.json")

[node name="LoadDialog" type="FileDialog" parent="CanvasLayer/UI/FileDialogHolder"]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="ExitDialog" type="ConfirmationDialog" parent="CanvasLayer/UI/FileDialogHolder"]
initial_position = 1
size = Vector2i(428, 132)
dialog_text = "
    Are your sure you want to exit to he main menu?   "

[node name="MessageDialog" type="AcceptDialog" parent="CanvasLayer/UI/FileDialogHolder"]
initial_position = 1

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false

[node name="Node2D" type="Node2D" parent="."]

[node name="BoardEditable" parent="." instance=ExtResource("2_dypo2")]

[node name="LineHighlight" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 0)

[connection signal="mouse_entered" from="CanvasLayer/UI" to="." method="onHoverEnterUI"]
[connection signal="mouse_exited" from="CanvasLayer/UI" to="." method="onHoverExitUI"]
[connection signal="pressed" from="CanvasLayer/UI/MenuTop/Left/NewButton" to="." method="onNewPressed"]
[connection signal="pressed" from="CanvasLayer/UI/MenuTop/Left/SaveButton" to="." method="onSavePressed"]
[connection signal="pressed" from="CanvasLayer/UI/MenuTop/Left/LoadButton" to="." method="onLoadPressed"]
[connection signal="text_changed" from="CanvasLayer/UI/MenuTop/NameEdit" to="." method="setBoardName"]
[connection signal="pressed" from="CanvasLayer/UI/MenuBottom/Left/ExitButton" to="." method="onExitPressed"]
[connection signal="confirmed" from="CanvasLayer/UI/FileDialogHolder/NewDialog" to="." method="onNewConfirmed"]
[connection signal="file_selected" from="CanvasLayer/UI/FileDialogHolder/SaveDialog" to="." method="onSaveConfirmed"]
[connection signal="file_selected" from="CanvasLayer/UI/FileDialogHolder/LoadDialog" to="." method="onLoadConfirmed"]
[connection signal="confirmed" from="CanvasLayer/UI/FileDialogHolder/ExitDialog" to="." method="onExitConfirmed"]
